tests/rosetta/transpiler/C/call-an-object-method.error
compile failed: exit status 1: /tmp/ctranspile3805116533/call-an-object-method.mochi.c: In function ‘_mem’:
/tmp/ctranspile3805116533/call-an-object-method.mochi.c:30:12: warning: ‘mallinfo’ is deprecated [-Wdeprecated-declarations]
   30 |     struct mallinfo mi = mallinfo();
      |            ^~~~~~~~
In file included from /tmp/ctranspile3805116533/call-an-object-method.mochi.c:5:
/usr/include/malloc.h:114:24: note: declared here
  114 | extern struct mallinfo mallinfo (void) __THROW __MALLOC_DEPRECATED;
      |                        ^~~~~~~~
/tmp/ctranspile3805116533/call-an-object-method.mochi.c: At top level:
/tmp/ctranspile3805116533/call-an-object-method.mochi.c:41:11: error: invalid initializer
   41 | Box box = 0;
      |           ^

